@startuml 
left to right direction
hide circles
hide empty methods

title: MusicOmega - Modello concettuale

class Utente  {
   idUtente {PK}
   cognome
   nome
   dataNascita
   nazionalita
   email
   dataScadenza
}

class Brano {
  idBrano {PK}
  titolo
  durataInSec
  dataPubblicazione
  uri
}

class Genere {
  idGenere {PK}
  genere
}

class Album {
  idAlbum {PK}
  copertina
  titolo
  dataPubblicazione
}

class Artista {
idArtista {PK}
 nome
 biografia
 nazionalita 
}

class Playlist {
  idPlaylist {PK}
  titolo
  dataCreazione
}

class BranoPlaylist {
}

class Ascolto {
  inizio
  like
}

Utente "1" -- "n" Playlist
Playlist "n" -- "1" BranoPlaylist
BranoPlaylist "n" -- "1" Brano
Album "1" -- "n" Brano
Brano "n" -- "n" Genere
Brano "n" -- "1" Artista
' Album "n" -- "1" Artista
Note bottom of Album: Un album contiene brani di un solo artista
Utente "1" -- "n" Ascolto
Ascolto "n" -- "1" Brano
@enduml
